--- a/oblig1/report/report.tex
+++ b/oblig1/report/report.tex
@@ -118,7 +118,7 @@ The data set for this section is based on the following measurements of 54 wild 
 
         \begin{figure}[htb]
             \centering
-            \includegraphics[width=\columnwidth]{../a1-weight_length_chest.pdf}
+            \includegraphics[width=0.8\columnwidth]{../a1-weight_length_chest.pdf}
             \caption{Boxplot showing the distribution of weight, length and chest measurements done on 54 bears. The mean weight is 182.9 lbs, median weight is 150.0 lbs. The mean length is 58.62 in, median length is 60.75 in. The mean chest circumference is 35.66 in, whereas the median is 34.66 in. The means are in all cases higher than the medians, which indicate that there exist outliers in the data.}
             \label{fig:a1}
         \end{figure}
@@ -247,14 +247,57 @@ The square of the multiple  correlation coefficient, $R^2$, was found to be $R^2
             \label{eq:rsquared_crossval}
         \end{equation}
 
-        The numerical code for 
+        The numerical code for finding the cross validated $R^2$ is available online\footnote{\url{http://www.uio.no/studier/emner/matnat/math/STK4900/v11/crossvalidated-R2.html}}. The model was evaluated using the call \texttt{cv.R2(weightmod\_5}, where \texttt{weightmod\_5} is the linear model based on eq.~(\ref{eq:fullmodel}).  
 
+        The cross validated correlation coefficient was found to be $R^2_{\rm cv} = 0.9375$. 
 
+    \item \textbf{Forward selection of covariates}
 
-    \item \textbf{Forward selection of covariates}<++>
+        Results from the forward selection of covariates, including incrementally one covariate for each new model, are plotted in fig.~(\ref{fig:i}).
 
-    \item \textbf{Summary}<++>
-\end{enumerate}<++>
+        The models were composed in the manner shown in tab.~(\ref{tab:i}), and the results are plotted in fig.~(\ref{fig:i}). 
+
+        The largest $R^2_{\rm cv}$ was found for model 3, with three covariates and $R_{\rm cv}^2 = 0.9694$. The smallest was found for model 8, with $R^2_{\rm cv} = 0.9375$.
+
+        \begin{table}
+            \scriptsize
+            \centering
+            \makebox[\linewidth]{
+            \begin{tabular}{c ccc ccc cc ccc}
+                \hline
+                \textbf{Model} & lg(\texttt{CHEST}) & lg(\texttt{LENGTH}) &
+                lg(\texttt{HEADWTH}) & lg(\texttt{AGE}) & \texttt{MONTH} & lg(\texttt{HEADLEN}) & lg(\texttt{NECK}) & \texttt{SEX} & $R^2$ & adj. $R^2$ & $R^2_{\rm cv}$ \\
+                \hline
+                1 & Y &&&&&&&&          0.9529 & 0.9529 & 0.9494  \\
+                2 & Y & Y &&&&&&&       0.9697 & 0.9682 & 0.9655  \\
+                3 & Y & Y & Y &&&&&&    0.9746 & 0.9727 & 0.9694  \\
+                4 & Y & Y & Y & Y &&&&& 0.9756 & 0.9731 & 0.9692  \\
+                5 & Y & Y & Y & Y &Y&&&&0.9802 & 0.9734 & 0.9606  \\
+                6 & Y & Y & Y & Y&Y&Y&&&0.9808 & 0.9734 & 0.9601  \\
+                7 & Y & Y & Y &Y&Y&Y&Y&&0.9811 & 0.9730 & 0.9440  \\
+                8 & Y & Y & Y&Y&Y&Y&Y&Y&0.9813 & 0.9722 & 0.9375  \\
+                \hline
+            \end{tabular}}
+            \caption{Multiple correlation coefficient squared $R$, adjusted  $R^2$ and cross validated $R^2_{\rm cv}$, see eq.~(\ref{eq:rsquared_crossval}), for different model covariates with outcome log(\texttt{WEIGHT}). The results are plotted in fig.~(\ref{fig:i}), and the largest $R^2_{cv}$ is obtained for model 3, with three covariates: \texttt{CHEST}, \texttt{LENGTH} and \texttt{HEADWTH}. }
+            \label{tab:i}
+        \end{table}
+
+        \begin{figure}[htb]
+            \centering
+            \includegraphics[width=0.6\columnwidth]{../i-model_crossvalR2.pdf}
+            \caption{Correlation coefficient squared, $R^2$ (blue boxes), adjusted $R^2$ (black circles) and cross validated $R^2_{\rm cv}$ (red filled circles), for different models chosen using forward selection of covariates. The maximum $R^2_{\rm cv}$ is found for model 3, with three covariates; \texttt{CHEST} circumference, \texttt{LENGTH} and \texttt{HEADWTH}. }
+            \label{fig:i}
+        \end{figure}
+
+    \item \textbf{Summary}
+
+        This exercise has shown that a model rarely gets better than the physical understanding that can be inferred from it. As shown in the last problem, the model with most covariates also had the worst cross validated $R^2_{\rm cv}$, but one could falsely be led to believe it was the best, following that the maximum for the un-adjusted $R^2$ was for model 8.
+
+        The power of each predictor can be obtained by using the logarithm of the outcome and the predictors. The possible constants that precede a product equation (such as the volume-formula), are nicely fitted into the coefficient $\beta_0$, which gives the intercept for a linear logarithmic curve.
+
+        The initial thought of modeling a bear as a cylinder, having a circumference (\texttt{CHEST}) and height (\texttt{LENGTH}) provided a good model. However, the addition of one extra covariate, the \texttt{HEADWTH}, improved the model even more. To predict the weight of an adult bear (age > 12 months), one could thus measure these three covariates and obtain a reasonable estimate of the bear's weight.
+
+\end{enumerate}
 
 %%%%%%%%%%% BIBLIOGRAPHY %%%%%%%%%%%%%%%%%
 \bibliography{referanser}
@@ -377,9 +420,11 @@ Results for a fitted model using eq.~(\ref{eq:fullmodel}).
 }
 
 
+%\section{Source code}
+
+%\lstinputlisting[language=R]{../bears.R}
 
 
-%\lstinputlisting[language=c++]{../mainMonteCarloVMC1.cpp}
 
 \end{document}
 
