Added missing epsilon

--- a/oblig1/report/report.tex
+++ b/oblig1/report/report.tex
@@ -228,7 +228,7 @@ All covariates are included in the last exercises.
 \begin{align}
     \log(\mathtt{WEIGHT}) &= \beta_0 + \beta_1 \log(\mathtt{LENGTH}) + \beta_2 \log\left( \mathtt{CHEST} \right) \notag \\
     &+ \beta_3 \log \left( \mathtt{NECK} \right) + \beta_4 \log\left( \mathtt{HEADWTH} \right) + \beta_5 \log \left( \mathtt{HEADLEN} \right) \notag \\
-    &+ \beta_6 \mathtt{SEX} + \beta_7 \mathtt{MONTH} + \beta_8 \log \left( \mathtt{AGE} \right)
+    &+ \beta_6 \mathtt{SEX} + \beta_7 \mathtt{MONTH} + \beta_8 \log \left( \mathtt{AGE} \right) + \varepsilon
     \label{eq:fullmodel}
 \end{align}
 
