--- a/hjemmeeksamen/report/report.tex
+++ b/hjemmeeksamen/report/report.tex
@@ -112,7 +112,7 @@
 
         Using univariate regression, where the response \CHHO is modelled as either a function of air tightness, or as a function of UFFI presence, described generally as
         \begin{equation}
-            {\rm CH_2O} = \beta_0 = \beta_1 x_1 + \varepsilon
+            {\rm CH_2O} = \beta_0 = \beta_1 x_1 + \beta_2 x_2 + \dots + \varepsilon
             \label{eq:linmod}
         \end{equation}
         where $\beta_0$ gives the mean concentration of \CHHO (ie.,~\textit{the intercept}), and $\beta_1$ gives the change per unit change (ie.,~\textit{the slope}) in the covariate $x_1$ which either can be the air tightness, or the binary covariate UFFI presence in this part of the problem. The $\varepsilon$ is the error. 
